# web_devp_with_py_htmx_tailwind

./: .gitignore  README.md  pyproject.toml
app/: main.py  routes.py
app/templates/: main.html
